#
# The Utility Library
#
# Copyright (C) 2020, HENSOLDT Cyber GmbH
#

cmake_minimum_required(VERSION 3.17)

#-------------------------------------------------------------------------------
project(lib_util C)

#-------------------------------------------------------------------------------
# LIBRARY
#-------------------------------------------------------------------------------
add_library(${PROJECT_NAME} INTERFACE)

target_sources(${PROJECT_NAME}
    INTERFACE
        "src/BitConverter.c"
        "src/CharFifo.c"
        "src/PointerVector.c"
        "src/RleCompressor.c"
)

target_include_directories(${PROJECT_NAME}
    INTERFACE
        "include"
)

if (DEBUG_CONFIG_H_FILE)
    target_compile_definitions(${PROJECT_NAME}
        INTERFACE
            "DEBUG_CONFIG_H_FILE=${DEBUG_CONFIG_H_FILE}"
    )
endif ()

target_link_libraries(${PROJECT_NAME}
    INTERFACE
        os_core_api
        lib_debug
        lib_mem
)

#-------------------------------------------------------------------------------
# MOCKS
#-------------------------------------------------------------------------------
if (BUILD_TESTING)
    add_library("${PROJECT_NAME}_mocks"
        "src/PointerVector.c" # TODO Write a real mock.
    )

    target_include_directories("${PROJECT_NAME}_mocks"
        PUBLIC
            "include"
    )

    target_link_libraries("${PROJECT_NAME}_mocks"
        PUBLIC
            lib_debug_mocks
            lib_mem_mocks
    )
endif ()
